--- a/index.html
+++ b/index.html
@@ -9,7 +9,14 @@
 </head>
 <body>
 
-    <div id="container"></div>
+    <div id="container">
+        <div id="profile">
+            <img src="./assets/avatar-light.png" alt="foto de perfil">
+
+        </div>
+
+
+    </div>
     
 
 </body>
