--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Matheus Profile</title>
@@ -12,12 +15,25 @@
     <div id="container">
         <div id="profile">
             <img src="./assets/avatar-light.png" alt="foto de perfil">
+        <p>Matheus Silva</p>
+
+
 
         </div>
-
-
+        <ul>
+            <li>
+                <a href="#">Botão 1</a>
+            </li>
+            <li>
+                <a href="#">Botão 2</a>
+            </li>
+            <li>
+                <a href="#">Botão 3</a>
+            </li>
+            <li>
+                <a href="#">Botão 4</a>
+            </li>
+        </ul>
     </div>
-    
-
 </body>
 </html>
