--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="light">
 <head>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -36,14 +36,31 @@
         </ul>
 
         <div id="social-links">
+
+            <a href="" target="_blank">
             <ion-icon name="logo-github"></ion-icon>
+            </a>
+
+            <a href="" target="_blank">
             <ion-icon name="logo-instagram"></ion-icon>
+            </a>
+
+            <a href="" target="_blank">
             <ion-icon name="logo-youtube"></ion-icon>
+            </a>
+
+            <a href="" target="_blank">
             <ion-icon name="logo-linkedin"></ion-icon>
-
-            
-
+            </a>
         </div>
+
+        <footer>
+            Desenvolvido por <a href="https://github.com/abebematheus">Matheus Silva</a> 
+
+
+        </footer>
+
+
     </div>
 
 
