--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="light">
+<html lang="en" class="dark">
 <head>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -20,6 +20,13 @@
 
 
         </div>
+
+        <div id="switch">
+            <button></button>
+            <span></span>
+        </div>
+
+
         <ul>
             <li>
                 <a href="#">Botão 1</a>
