--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div id="container">
         <div id="profile">
             <img src="./assets/avatar-light.png" alt="foto de perfil">
-        <p>Matheus Silva</p>
+        <p>@abebematheus</p>
 
 
 
@@ -28,16 +28,16 @@
 
         <ul>
             <li>
-                <a href="#">Botão 1</a>
+                <a href="#">POKEDEX</a>
             </li>
             <li>
-                <a href="#">Botão 2</a>
+                <a href="#">KALENDRIER</a>
             </li>
             <li>
-                <a href="#">Botão 3</a>
+                <a href="#">SPOTIFY</a>
             </li>
             <li>
-                <a href="#">Botão 4</a>
+                <a href="#">E-COMERCE</a>
             </li>
         </ul>
 
