--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     
 </head>
 <body>
+    <div class="seu-svg-container">          </div>
+
     <div id="container">
         <div id="profile">
             <img src="./assets/avatar-light.png" alt="foto de perfil">
@@ -28,7 +30,7 @@
 
         <ul>
             <li>
-                <a href="#">POKEDEX</a>
+                <a href="#">Pokedex</a>
             </li>
             <li>
                 <a href="#">KALENDRIER</a>
