--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <div id="container">
         <div id="profile">
-            <img src="./assets/avatar-light.png" alt="foto de perfil">
+            <img src="./assets/avatar.png" alt="foto de perfil">
         <p>@abebematheus</p>
 
 
@@ -33,13 +33,13 @@
                 <a href="#">Pokedex</a>
             </li>
             <li>
-                <a href="#">KALENDRIER</a>
+                <a href="#">Kalendrier</a>
             </li>
             <li>
-                <a href="#">SPOTIFY</a>
+                <a href="#">Mu Sic</a>
             </li>
             <li>
-                <a href="#">E-COMERCE</a>
+                <a href="#">Comerce</a>
             </li>
         </ul>
 
