--- a/index.html
+++ b/index.html
@@ -29,18 +29,15 @@
 
 
         <ul>
-            <li>
-                <a href="#">Pokedex</a>
-            </li>
-            <li>
-                <a href="#">Kalendrier</a>
-            </li>
-            <li>
-                <a href="#">Mu Sic</a>
-            </li>
-            <li>
-                <a href="#">Comerce</a>
-            </li>
+
+            <li><a href="#"> <ion-icon name="game-controller"></ion-icon>Pokedex</a></li>
+
+            <li><a href="#"> <ion-icon name="calendar"></ion-icon>Kalendrier</a></li>
+
+            <li><a href="#"> <ion-icon name="headset"></ion-icon>Mu Sic</a></li>
+
+            <li><a href="#"> <ion-icon name="storefront"></ion-icon>Comerce</a></li>
+
         </ul>
 
         <div id="social-links">
