--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
 
         <div id="social-links">
 
-            <a href="" target="_blank">
+            <a href="https://www.github.com/abebematheus" target="_blank">
             <ion-icon name="logo-github"></ion-icon>
             </a>
 
-            <a href="" target="_blank">
+            <a href="./assets/Resume Matheus Silva.pdf" target="_blank">
             <ion-icon name="logo-instagram"></ion-icon>
             </a>
 
@@ -54,7 +54,7 @@
             <ion-icon name="logo-youtube"></ion-icon>
             </a>
 
-            <a href="" target="_blank">
+            <a href="https://www.linkedin.com/in/abebematheus" target="_blank">
             <ion-icon name="logo-linkedin"></ion-icon>
             </a>
         </div>
