--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
             </a>
 
             <a href="./assets/Resume Matheus Silva.pdf" target="_blank">
-            <ion-icon name="logo-instagram"></ion-icon>
+            <ion-icon name="newspaper"></ion-icon>
             </a>
 
-            <a href="" target="_blank">
-            <ion-icon name="logo-youtube"></ion-icon>
+            <a href="https://api.whatsapp.com/send?phone=5511986163445&text=Ol%C3%A1%20Matheus,%20vim%20pelo%20seu%20portf%C3%B3lio,%20tudo%20bem?" target="_blank">
+            <ion-icon name="logo-whatsapp"></ion-icon>
             </a>
 
             <a href="https://www.linkedin.com/in/abebematheus" target="_blank">
