--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
         <ul>
 
-            <li><a href="#"> <ion-icon name="game-controller"></ion-icon>Pokedex</a></li>
+            <li><a href="https://abebematheus.github.io/Pokedex/"> <ion-icon name="game-controller"></ion-icon>Pokedex</a></li>
 
             <li><a href="#"> <ion-icon name="calendar"></ion-icon>Kalendrier</a></li>
 
